<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#ffffff" >
	<Button
		android:id="@+id/btn_interv"
		style="?android:attr/buttonStyleSmall"
		android:layout_width="65dp"
		android:layout_height="35dp"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true"
		android:layout_toLeftOf="@+id/btn_clients"
		android:text="@string/interv"
		android:textSize="8sp" />
	<Button
		android:id="@+id/btn_costs"
		style="?android:attr/buttonStyleSmall"
		android:layout_width="65dp"
		android:layout_height="35dp"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:text="@string/costs"
		android:textSize="8sp" />
	<Button
		android:id="@+id/btn_signature"
		style="?android:attr/buttonStyleSmall"
		android:layout_width="65dp"
		android:layout_height="35dp"
		android:layout_alignParentRight="true"
		android:layout_alignParentTop="true"
		android:text="@string/signature"
		android:textSize="8sp" />
	<Button
		android:id="@+id/btn_clients"
		style="?android:attr/buttonStyleSmall"
		android:layout_width="65dp"
		android:layout_height="35dp"
		android:layout_alignParentTop="true"
		android:layout_toLeftOf="@+id/btn_costs"
		android:text="@string/clients"
		android:textSize="8sp" />
	<Button
		android:id="@+id/btn_details"
		style="?android:attr/buttonStyleSmall"
		android:layout_width="65dp"
		android:layout_height="35dp"
		android:layout_alignParentTop="true"
		android:layout_toRightOf="@+id/btn_costs"
		android:text="@string/details"
		android:textSize="8sp" />
</RelativeLayout>