<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/refresh_menu"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="0"
        android:title="@string/refresh_interventi_menu"
        app:showAsAction="always">
    </item>
    <item
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="1"
        android:title="@string/menu_settings"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/add_menu"
                android:icon="@drawable/ic_action_add"
                android:orderInCategory="0"
                android:title="@string/add_intervento_menu"
                app:showAsAction="always">
            </item>
            <item
                android:id="@+id/logout_menu"
                android:icon="@drawable/ic_action_close"
                android:orderInCategory="1"
                android:title="@string/logout_menu"
                app:showAsAction="always">
            </item>
        </menu>
    </item>

</menu>