<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="4dp"
		android:paddingRight="4dp"
		android:text="@string/conn_unavailable_text" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:orientation="horizontal"
		android:weightSum="3" >

		<Button
			android:id="@+id/enable_wifi_btn"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/enable_wifi" />

		<Button
			android:id="@+id/enable_mobile_btn"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/enable_mobile" />

		<Button
			android:id="@+id/cancel_btn"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/cancel_btn" />
	</LinearLayout>

</LinearLayout>